--- a/.dockerignore
+++ b/.dockerignore
@@ -35,7 +35,8 @@ npm-debug.log
 blockster_v2-*.tar
 
 # Ignore assets that are produced by build tools
-/assets/node_modules
+assets/node_modules
+**/node_modules
 
 # Ignore digested assets cache
 /priv/static/cache_manifest.json
