--- a/assets/package.json
+++ b/assets/package.json
@@ -4,7 +4,12 @@
   "description": "Blockster V2 frontend dependencies",
   "private": true,
   "dependencies": {
-    "quill": "^2.0.2",
+    "@tiptap/core": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/extension-text-align": "^2.1.13",
+    "@tiptap/extension-placeholder": "^2.1.13",
     "thirdweb": "^5.110.6"
   }
 }
