--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
     "@tiptap/extension-underline": "^2.1.13",
     "@tiptap/extension-text-align": "^2.1.13",
     "@tiptap/extension-placeholder": "^2.1.13",
+    "@tiptap/extension-image": "^2.1.13",
     "thirdweb": "^5.110.6"
   }
 }
