--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@tiptap/extension-underline": "^3.10.1",
     "@tiptap/pm": "^3.10.1",
     "@tiptap/starter-kit": "^3.10.1",
+    "ethers": "^6.9.0",
     "swiper": "^12.0.3",
     "thirdweb": "^5.110.6"
   }
